--- a/email_automation.ipynb
+++ b/email_automation.ipynb
@@ -19,7 +19,7 @@
     "import pyperclip as ppc\n",
     "import time\n",
     "\n",
-    "## x, y = ptg.position()  Usado para obter a localização do mouse.\n",
+    "## x, y = ptg.position()  Used to get the cursor location\n",
     "## print(x,y) "
    ]
   },
