--- a/email_automation.ipynb
+++ b/email_automation.ipynb
@@ -271,7 +271,7 @@
     "time.sleep (5)\n",
     "ptg.click(x=52, y=229)\n",
     "time.sleep (2)\n",
-    "ptg.write (\"thelis2016@gmail.com\")\n",
+    "ptg.write (\"theonmosimann@gmail.com\")\n",
     "ptg.press (\"enter\")\n",
     "ptg.press (\"tab\")\n",
     "ptg.write (\"Resumo de Vendas\")\n",
